@@ -41,145 +41,10 @@
 
 IW_EXTERN_C_START
 
-/* Align x_ with v_. v_ must be simple power for 2 value. */
-#define IW_ROUNDUP(x_, v_) (((x_) + (v_) - 1) & ~((v_) - 1))
-
-/* Round down align x_ with v_. v_ must be simple power for 2 value. */
-#define IW_ROUNDOWN(x_, v_) ((x_) - ((x_) & ((v_) - 1)))
-
-#if defined(NDEBUG)
-#define IW_DODEBUG(IW_expr_) \
-  do {                       \
-  } while (0)
-#else
-#define IW_DODEBUG(IW_expr_) \
-  { IW_expr_; }
-#endif
-
-#if __GNUC__ >= 5
-#define IW_SWAB16(num_) __builtin_bswap16(num_)
-#else
-#define IW_SWAB16(num_) \
-  ((((num_) & 0x00ffU) << 8) | (((num_) & 0xff00U) >> 8))
-#endif
-
-#if __GNUC__ >= 4
-#define IW_SWAB32(num_) __builtin_bswap32(num_)
-#else
-#define IW_SWAB32(num_)                                              \
-  ((((num_) & 0x000000ffUL) << 24) | (((num_) & 0x0000ff00UL) << 8)   \
-   | (((num_) & 0x00ff0000UL) >> 8) | (((num_) & 0xff000000UL) >> 24))
-#endif
-
-#if __GNUC__ >= 4
-#define IW_SWAB64(num_) __builtin_bswap64(num_)
-#else
-#define IW_SWAB64(num_)                     \
-  ((((num_) & 0x00000000000000ffULL) << 56)   \
-   | (((num_) & 0x000000000000ff00ULL) << 40)   \
-   | (((num_) & 0x0000000000ff0000ULL) << 24)   \
-   | (((num_) & 0x00000000ff000000ULL) << 8)    \
-   | (((num_) & 0x000000ff00000000ULL) >> 8)    \
-   | (((num_) & 0x0000ff0000000000ULL) >> 24)   \
-   | (((num_) & 0x00ff000000000000ULL) >> 40)   \
-   | (((num_) & 0xff00000000000000ULL) >> 56))
-#endif
-
-#ifdef IW_BIGENDIAN
-#define IW_HTOIS(num_)  IW_SWAB16(num_)
-#define IW_HTOIL(num_)  IW_SWAB32(num_)
-#define IW_HTOILL(num_) IW_SWAB64(num_)
-#define IW_ITOHS(num_)  IW_SWAB16(num_)
-#define IW_ITOHL(num_)  IW_SWAB32(num_)
-#define IW_ITOHLL(num_) IW_SWAB64(num_)
-#else
-#define IW_HTOIS(num_)  (num_)
-#define IW_HTOIL(num_)  (num_)
-#define IW_HTOILL(num_) (num_)
-#define IW_ITOHS(num_)  (num_)
-#define IW_ITOHL(num_)  (num_)
-#define IW_ITOHLL(num_) (num_)
-#endif
-
-#define IW_WRITEBV(ptr_, v_, m_)  \
-  static_assert(sizeof(v_) == 1, "Mismatch v_ size"); \
-  (v_) = (m_);                          \
-  memcpy(ptr_, &(v_), 1); \
-  (ptr_) += 1
-
-#define IW_WRITESV(ptr_, v_, m_)  \
-  static_assert(sizeof(v_) == 2, "Mismatch v_ size"); \
-  (v_) = (m_);                          \
-  (v_) = IW_HTOIS(v_);                \
-  memcpy(ptr_, &(v_), 2); \
-  (ptr_) += 2
-
-#define IW_WRITELV(ptr_, v_, m_)  \
-  static_assert(sizeof(v_) == 4, "Mismatch v_ size"); \
-  (v_) = (m_);                          \
-  (v_) = IW_HTOIL(v_);                \
-  memcpy(ptr_, &(v_), 4); \
-  (ptr_) += 4
-
-#define IW_WRITELLV(ptr_, v_, m_) \
-  static_assert(sizeof(v_) == 8, "Mismatch v_ size"); \
-  (v_) = (m_);                          \
-  (v_) = IW_HTOILL(v_);               \
-  memcpy((ptr_), &(v_), 8); \
-  (ptr_) += 8
-
-#define IW_READBV(ptr_, t_, m_)   \
-  static_assert(sizeof(t_) == 1, "Mismatch t_ size"); \
-  (t_) = 0; \
-  memcpy(&(t_), ptr_, 1);  \
-  (m_) = (t_);   \
-  (ptr_) += 1
-
-#define IW_READSV(ptr_, t_, m_)   \
-  static_assert(sizeof(t_) == 2, "Mismatch t_ size"); \
-  (t_) = 0; \
-  memcpy(&(t_), ptr_, 2);  \
-  (m_) = IW_ITOHS(t_);  \
-  (ptr_) += 2
-
-#define IW_READLV(ptr_, t_, m_)   \
-  static_assert(sizeof(t_) == 4, "Mismatch t_ size"); \
-  (t_) = 0; \
-  memcpy(&(t_), ptr_, 4);  \
-  (m_) = IW_ITOHL(t_);  \
-  (ptr_) += 4
-
-#define IW_READLLV(ptr_, t_, m_)  \
-  static_assert(sizeof(t_) == 8, "Mismatch t_ size"); \
-  (t_) = 0; \
-  memcpy(&(t_), ptr_, 8);  \
-  (m_) = IW_ITOHLL(t_); \
-  (ptr_) += 8
-
-#ifndef SIZE_T_MAX
-#define SIZE_T_MAX ((size_t) -1)
-#endif
-
-#ifndef OFF_T_MIN
-#define OFF_T_MIN ((off_t) (((uint64_t) 1) << (8 * sizeof(off_t) - 1)))
-#endif
-#ifndef OFF_T_MAX
-#define OFF_T_MAX ((off_t) ~(((uint64_t) 1) << (8 * sizeof(off_t) - 1)))
-#endif
-
-#ifdef __GNUC__
-#define IW_LIKELY(x_)   __builtin_expect(!!(x_), 1)
-#define IW_UNLIKELY(x_) __builtin_expect(!!(x_), 0)
-#else
-#define IW_LIKELY(x_)
-#define IW_UNLIKELY(x_)
-#endif
-
 #define IW_RANGES_OVERLAP(IW_s1_, IW_e1_, IW_s2_, IW_e2_) \
   (  ((IW_e1_) > (IW_s2_) && (IW_e1_) <= (IW_e2_))          \
   || ((IW_s1_) >= (IW_s2_) && (IW_s1_) < (IW_e2_))          \
   || ((IW_s1_) <= (IW_s2_) && (IW_e1_) >= (IW_e2_)))
-
 
 ///////////////////////////////////////////////////////////////////////////
 //                    Variable length number encoding                    //
