@@ -1,5 +1,6 @@
 iowow (1.4.14) UNRELEASED; urgency=medium
 
+  * Moved some useful defs from iwutil.h into basedefs.h
   * Fixed iwre_match() function signatute allowing `const  char* input`
   (iwre.h)
   * Added lightweight regexp implementation (iwre.h)
